--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,8 @@ img {
 
 html {
   font-size: 16px;
+  overflow-x: hidden;
+
 }
 
 body {
@@ -36,6 +38,7 @@ body {
   letter-spacing: -0.5px;
   line-height: 1.6;
   color: #888;
+  overflow-x: hidden;
 }
 
 /* 공통(재사용) */
@@ -56,52 +59,77 @@ body {
   clear: both;
 }
 
+/* 오른쪽 고정메뉴 */
+.fix-menu {
+  position: fixed;
+  top: 200px;
+  right: 10px;
+  display: block;
+  z-index: 99999;
+}
+
+.fix-menu a {
+  position: relative;
+  display: block;
+  margin-bottom: 10px;
+}
+
+@media all and (max-width:700px) {
+  .fix-menu {
+    display: none;
+  }
+}
+
 /* header */
 .header {
   position: relative;
   display: block;
   z-index: 9999;
-  /* background-color: skyblue; */
+  border-bottom: 1px solid rgba(0,0,0,0.1);
+}
+
+.header-fix {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
 }
 
 .header .inner {
+  width: 100%;
+  max-width: 1200px;
   position: relative;
   display: block;
-  height: 130px;
+}
+
+.header .inner::before {
+  content: '';
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 0;
+  display: block;
+  width: 100vw;
+  height: 100%;
+  background-color: #fff;
+}
+
+.header-top {
+  position: relative;
+  display: block;
+  padding-top: 20px;
 
 }
 
-.logo {
-  position: absolute;
-  left: 0;
-  top: 65px;
-  display: block;
-  width: 200px;
-  height: 47px;
-  background: url(../images/logo.png) no-repeat center;
-  background-size: contain;
-  font-size: 0;
-}
-
-.gnb {
-  position: absolute;
-  right: 0;
-  top: 75px;
-  display: block;
-
-}
-
-.h-sns {
-  position: absolute;
-  right: 0;
-  top: 20px;
-  display: block;
+.header-top-close {
+  display: none;
 }
 
 .h-sns-list {
   position: relative;
   display: block;
   overflow: hidden;
+  float: right;
 }
 
 .h-sns-list li {
@@ -129,16 +157,142 @@ body {
   background-size: contain;
 }
 
-.icon-fb {
-  background: url(../images/sns_facebook.png) no-repeat center;
-  background-size: contain;
-}
-
 .icon-is {
   background: url(../images/sns_insta.png) no-repeat center;
   background-size: contain;
 }
 
+.icon-fb {
+  background: url(../images/sns_facebook.png) no-repeat center;
+  background-size: contain;
+}
+
+.header-main {
+  position: relative;
+  display: block;
+  padding: 20px 0;
+  height: 87px;
+  overflow: hidden;
+  transition: height 0.5s;
+}
+
+.header-main-show {
+  height: 258px;
+}
+
+.logo {
+  position: relative;
+  display: block;
+  width: 200px;
+  height: 47px;
+  background: url(../images/logo.png) no-repeat center;
+  background-size: contain;
+  font-size: 0;
+  float: left;
+}
+
+.gnb {
+  position: relative;
+  display: block;
+  float: right;
+
+}
+
+.menu {
+  position: relative;
+  display: block;
+  font-size: 0;
+  text-align: center;
+}
+
+.menu>li {
+  position: relative;
+  display: inline-block;
+  vertical-align: top;
+  padding: 0 40px;
+}
+
+.menu>li:last-child {
+  padding-right: 0;
+}
+
+.menu>li>a {
+  position: relative;
+  display: block;
+  font-size: 18px;
+  color: #333;
+  line-height: 47px;
+}
+
+.submenu {
+  position: relative;
+  display: block;
+  padding: 20px 0;
+}
+
+.submenu li {
+  position: relative;
+  display: block;
+  line-height: 30px;
+
+}
+
+.submenu li a {
+  position: relative;
+  display: block;
+  font-size: 14px;
+  color: #999;
+
+}
+
+@media all and (max-width:1080px) {
+  .menu>li {
+    padding: 0 30px;
+  }
+}
+
+@media all and (max-width:960px) {
+  .menu>li {
+    padding: 0 20px;
+  }
+}
+
+@media all and (max-width:850px) {
+  .logo {
+    width: 140px;
+  }
+
+  .menu>li>a {
+    font-size: 16px;
+  }
+
+  .submenu li a {
+    font-size: 13px;
+  }
+}
+
+@media all and (max-width:760px) {
+  .menu>li {
+    padding: 0 15px;
+  }
+}
+@media all and (max-width:700px){
+  .logo{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50% , -50%);
+  }
+  .header-top{
+    display: none;
+  }
+  .header-main{
+    height: 81px;
+  }
+  .gnb{
+    display: none;
+  }
+}
 /* visual */
 .visual {
   position: relative;
@@ -668,11 +822,12 @@ body {
 
 .franchiser .inner {}
 
-.franchiser-top{
+.franchiser-top {
   position: relative;
   display: block;
 }
-.franchiser-top h2{
+
+.franchiser-top h2 {
   position: relative;
   display: block;
   font-size: 40px;
@@ -680,10 +835,12 @@ body {
   font-weight: 300;
   text-align: center;
 }
-.franchiser-top h2 b{
+
+.franchiser-top h2 b {
   font-weight: 500;
 }
-.franchiser-top span{
+
+.franchiser-top span {
   position: relative;
   display: block;
   font-size: 20px;
@@ -697,62 +854,211 @@ body {
   margin-top: 40px;
   text-align: center;
 }
-.franchiser-list li{
+
+.franchiser-list li {
   position: relative;
   display: block;
   float: left;
   width: 22%;
   margin-right: 4%;
 }
-.franchiser-list li:last-child{
+
+.franchiser-list li:last-child {
   margin-right: 0;
 }
-.franchiser-list li a{
+
+.franchiser-list li a {
   position: relative;
   display: block;
 }
-.franchiser-list li a img{
+
+.franchiser-list li a img {
   width: auto;
   height: 324px;
 }
-.franchiser-list li a span{
+
+.franchiser-list li a span {
   position: relative;
   display: block;
   margin-top: 20px;
   color: #fff;
   font-size: 20px;
 }
+
 /* 프랜차이즈 반응형 영역 */
 @media all and (max-width:1000px) {
   .franchiser {
     padding: 10vw 0;
   }
-  .franchiser-top h2{
+
+  .franchiser-top h2 {
     font-size: 30px;
   }
-  .franchiser-top span{
+
+  .franchiser-top span {
     font-size: 15px;
   }
-  .franchiser-list{
+
+  .franchiser-list {
     margin-top: 4vw;
   }
-  .franchiser-list li a img{
+
+  .franchiser-list li a img {
     height: 32.4vw;
   }
-  .franchiser-list li a span{
+
+  .franchiser-list li a span {
     margin-top: 2vw;
     font-size: 15px;
     white-space: nowrap;
   }
 }
+
 /*  sns  */
 .sns {
   position: relative;
   display: block;
+  padding: 100px 0;
+}
+
+.sns .inner {
+  position: relative;
+  display: block;
+}
+
+.sns-top {
+  position: relative;
+  display: block;
+  text-align: center;
+}
+
+.sns-top h2 {
+  position: relative;
+  display: block;
+  font-size: 40px;
+  color: #000;
+  font-weight: 300;
+}
+
+.sns-top h2 b {
+  font-weight: 500;
+}
+
+.sns-top span {
+  position: relative;
+  display: block;
+  font-size: 20px;
+  color: #666;
+}
+
+@media all and (max-width:1000px) {
+  .sns {
+    padding: 10vw 0;
+  }
+
+  .sns-top h2 {
+    font-size: 30px;
+  }
+
+  .sns-top span {
+    font-size: 15px;
+  }
 }
 
 /* footer */
 .footer {
   position: relative;
   display: block;
+  background-color: #262626;
+  padding: 25px 0;
+}
+
+.footer .inner {
+  text-align: center;
+}
+
+.footer .inner hr {
+  border: 1px solid #262626;
+}
+
+.footer-menu {
+  position: relative;
+  display: inline-block;
+  white-space: nowrap;
+}
+
+.footer-menu li {
+  position: relative;
+  display: inline-block;
+  padding: 0 21px;
+}
+
+.footer-menu li a {
+  position: relative;
+  display: block;
+  font-size: 16px;
+  line-height: 30px;
+
+  color: #9e9e9e;
+
+}
+
+.footer-logo {
+  position: relative;
+  display: inline-block;
+  margin-top: 25px;
+  margin-bottom: 20px;
+}
+
+.footer-copy {
+  position: relative;
+  display: inline-block;
+  margin-bottom: 30px;
+  font-size: 13px;
+  color: #9e9e9e;
+}
+
+.bar {
+  position: relative;
+  display: inline-block;
+  margin: 0 10px;
+  vertical-align: 0;
+}
+
+.bar::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: -10px;
+  display: block;
+  width: 1px;
+  height: 12px;
+  background-color: #9e9e9e;
+}
+
+.footer-sns {
+  position: relative;
+  display: inline-block;
+}
+
+.footer-sns li {
+  float: left;
+  position: relative;
+  display: block;
+  padding: 0 3px;
+}
+
+.footer-sns li a {
+  position: relative;
+  display: block;
+}
+
+@media all and (max-width:1000px) {
+  .footer-menu li {
+    padding: 0 2.1vw;
+  }
+
+  .footer-menu li a {
+    font-size: 13px;
+  }
 }
