--- a/css/style.css
+++ b/css/style.css
@@ -27,8 +27,6 @@ img {
 
 html {
   font-size: 16px;
-  overflow-x: hidden;
-
 }
 
 body {
@@ -38,7 +36,7 @@ body {
   letter-spacing: -0.5px;
   line-height: 1.6;
   color: #888;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 /* 공통(재사용) */
@@ -58,6 +56,89 @@ body {
   width: 100%;
   clear: both;
 }
+
+/* modal */
+
+.modal{
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0,0,0,0.6);
+  z-index: 9999999;
+  display: block;
+}
+
+.modal-wrap{
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);
+  width: 50%;
+  height: 40%;
+  background-color: #fff;
+  border-radius: 50px;
+  padding: 2%;
+  text-align: center;
+  border: 3px solid #888;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: space-between;
+}
+
+.modal-close{
+  position: absolute;
+  right: 50px;
+  top: 30px;
+  border: 0;
+  background-color: transparent;
+  cursor: pointer;
+  transition: transform 0.7s;
+}
+
+.modal-close i {
+  font-size: 30px;
+}
+
+.modal-close:hover{
+  transform: rotate(360deg);
+}
+.modal-wrap h2{
+  display: block;
+  width: 100%;
+  font-size: 35px;
+  font-weight: 500;
+  color: #000;
+}
+
+.modal-wrap p{
+  width: 100%;
+  font-size: 21px;
+  color: #000;
+}
+
+.modal-wrap ul{
+  width: 100%;
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+}
+
+.modal-wrap ul li{
+  width: 30%;
+}
+
+.modal-wrap ul li i{
+  font-size: 30px;
+  color: #bbb;
+  transition: color 0.5s;
+}
+
+.modal-wrap ul li a i:hover{
+  color: #000;
+}
+
 /* 위로가기 */
 .gotop{
   position: fixed;
