--- a/css/style.css
+++ b/css/style.css
@@ -79,18 +79,20 @@ body {
   height: 40%;
   background-color: #fff;
   border-radius: 50px;
-  padding: 2%;
+  padding: 3% 2%;
   text-align: center;
   border: 3px solid #888;
   display: flex;
   flex-wrap: wrap;
   align-content: space-between;
+  min-width: 300px;
+  min-height: 200px;
 }
 
 .modal-close{
   position: absolute;
-  right: 50px;
-  top: 30px;
+  right: 3vw;
+  top: 3vw;
   border: 0;
   background-color: transparent;
   cursor: pointer;
@@ -116,6 +118,7 @@ body {
   width: 100%;
   font-size: 21px;
   color: #000;
+  word-break: keep-all;
 }
 
 .modal-wrap ul{
@@ -126,7 +129,7 @@ body {
 }
 
 .modal-wrap ul li{
-  width: 30%;
+width: 30%;
 }
 
 .modal-wrap ul li i{
@@ -137,6 +140,31 @@ body {
 
 .modal-wrap ul li a i:hover{
   color: #000;
+}
+@media all and (max-width:1000px){
+  .modal-wrap{
+      height: 40vw;
+  }
+  .modal-wrap h2{
+      font-size: 3.5vw;
+  }
+  .modal-close{
+      right: 7vw;
+  }
+  .modal-close i {
+      font-size: 20px;
+  }
+  .modal-wrap p{
+      font-size: 2.1vw;
+  }
+  .modal-wrap ul li i{
+      font-size: 3vw;
+  }
+}
+@media all and (max-width:800px){
+  .modal-wrap p{
+    font-size: 2.5vw;
+}
 }
 
 /* 위로가기 */
